--- a/layouts/reminder-form.html
+++ b/layouts/reminder-form.html
@@ -66,11 +66,11 @@
                 <h3>Reminder Action</h3>
                 <label>
                     Action title: 
-                    <input type="text" name="action-title" />
+                    <input type="text" required name="action-title" />
                 </label>
                 <label>
                     Action url: 
-                    <input type="text" name="action-url" />
+                    <input type="text" required name="action-url" />
                 </label>
                 <label>
                     Action wait time:
@@ -92,11 +92,11 @@
             <h2>Completion Action</h2>
             <label>
                 Action title: 
-                <input type="text" name="action-title" />
+                <input type="text" required name="completion-action-title" />
             </label>
             <label>
                 Action url: 
-                <input type="text" name="action-url" />
+                <input type="text" required name="completion-action-url" />
             </label>
         </fieldset>
         {{/if}}
@@ -110,11 +110,11 @@
         <h3>Action</h3>
         <label>
             Action title: 
-            <input type="text" name="action-title" />
+            <input type="text" required name="action-title" />
         </label>
         <label>
             Action url: 
-            <input type="text" name="action-url" />
+            <input type="text" required name="action-url" />
         </label>
         <label>
             Action wait time:
