--- a/layouts/reminder-form.html
+++ b/layouts/reminder-form.html
@@ -28,9 +28,21 @@
         <label>Months:  <input type="number" name="give-or-take-months" value="{{ doc.interval.giveOrTake.months }}"></label>
 
     </fieldset>
+
+    <fieldset>
+        <h2>Pin to time</h2>
+        <label>Seconds:  <input type="number" name="give-or-take-seconds" value="{{ doc.interval.giveOrTake.seconds }}"></label>
+        <label>Minutes:  <input type="number" name="give-or-take-minutes" value="{{ doc.interval.giveOrTake.minutes }}"></label>
+        <label>Hours:  <input type="number" name="give-or-take-hours" value="{{ doc.interval.giveOrTake.hours }}"></label>
+        <label>Days:  <input type="number" name="give-or-take-days" value="{{ doc.interval.giveOrTake.days }}"></label>
+        <label>Weeks:  <input type="number" name="give-or-take-weeks" value="{{ doc.interval.giveOrTake.weeks }}"></label>
+        <label>Months:  <input type="number" name="give-or-take-months" value="{{ doc.interval.giveOrTake.months }}"></label>
+
+    </fieldset>
+
     <fieldset>
         <select name="mod">
-            <option value="addDays">Add Days</option>
+
         </select>
     </fieldset>
     <fieldset>
