--- a/layouts/list-agents.html
+++ b/layouts/list-agents.html
@@ -1,6 +1,4 @@
 {{#> site }}
-
-    
     <table>
         <thead>
             <tr>
@@ -9,22 +7,17 @@
                 <th>Next Reminder</th>
                 <th>Last Performed</th>
                 <th>Mark complete</th>
-                <th>Edit Reminder</th>
-                <th>Clear reminders</th>
             </tr>
         </thead>
         {{#each agents}}
             <tr>
-                <td>{{this.title}}</td>
+                <td class="title">{{this.title}} <a href="/edit-reminder?id={{this.id}}">&#x270E;</a></td>
                 <td class="{{this.status}}">{{this.status}}</td>
                 <td title="{{this.nextReminder}}">{{this.timeUntilNextReminder}}</td>
                 <td>{{this.lastPerformed}}</td>
                 <td><form action="/complete" method="POST"><input type="hidden" name="action" value="{{this.title}}" /><button type="submit">Mark complete</button></form></td>
-                <td><a href="/edit-reminder?id={{this.id}}">Edit reminder</a></td>
-                <td><form action="/clear-reminders" method="POST"><input type="hidden" name="action" value="{{this.id}}" /><button type="submit">Clear reminders</button></form></td>
             </tr>            
         {{/each}}
     </table>
-    </ul>
-    <form action="/clear-reminders" method="POST"><button type="submit">Clear all reminders</button></form>    
+    </ul>   
 {{/site}}
