--- a/layouts/reminder-form.html
+++ b/layouts/reminder-form.html
@@ -3,10 +3,25 @@
 <form action="/clear-reminders" method="POST"><input type="hidden" name="action" value="{{id}}" /><button type="submit">Clear reminders</button></form>
 {{/if}}
 
+<form action="/sleep">
+    {{#if doc.asleep}}
+        <button>Button</button>
+    {{else}}
+
+    {{/if}}
+</form>
+
 <form action="/reminder" method="POST" id="#add-reminder">
     <label>Name:<input type="text" name="title" value="{{doc.title}}" /></label>
-    <label>Description: <textarea name="description"></textarea></label>
-    
+    <label>Description: <textarea name="description">{{doc.description}}</textarea></label>
+    <div>
+        <label>
+            Sleep: <input name="asleep" type="text" value={{doc.asleep}} />
+        </label>
+
+
+    </div>
+
     {{#if id}}
     <input type="hidden" name="id" value="{{id}}"/>
     {{/if}}
@@ -21,7 +36,7 @@
         <label>Weeks:  <input type="number" name="weeks" value="{{ doc.interval.weeks }}"></label>
         <label>Months:  <input type="number" name="months" value="{{ doc.interval.months }}"></label>
     </fieldset>
-    <fieldset>
+    <!-- <fieldset>
         <h2>Give or Take</h2>
         <label>Seconds:  <input type="number" name="give-or-take-seconds" value="{{ doc.interval.giveOrTake.seconds }}"></label>
         <label>Minutes:  <input type="number" name="give-or-take-minutes" value="{{ doc.interval.giveOrTake.minutes }}"></label>
@@ -30,18 +45,12 @@
         <label>Weeks:  <input type="number" name="give-or-take-weeks" value="{{ doc.interval.giveOrTake.weeks }}"></label>
         <label>Months:  <input type="number" name="give-or-take-months" value="{{ doc.interval.giveOrTake.months }}"></label>
 
-    </fieldset>
+    </fieldset> -->
 
     <fieldset>
         <h2>Pin to time</h2>
-        <label>Cron:  <input type="text" name="cron" value="{{ doc.cron }}"></label>
+        <label>Cron:  <input type="text" name="cron" pattern="^((((\d+,)+\d+|(\d+(\/|-|#)\d+)|\d+L?|\*(\/\d+)?|L(-\d+)?|\?|[A-Z]{3}(-[A-Z]{3})?) ?){5,7})$|(@(annually|yearly|monthly|weekly|daily|hourly|reboot))|(@every (\d+(ns|us|µs|ms|s|m|h))+)" value="{{ doc.cron }}"></label>
 
-    </fieldset>
-
-    <fieldset>
-        <select name="mod">
-
-        </select>
     </fieldset>
     <fieldset>
         <h2>Reminder Actions</h2>
